fix: scroll bar visible when on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -106,6 +106,7 @@ nav .right-section {
 }
 
 #change-theme {
+  z-index: 999;
   cursor: pointer;
   border-radius: 100%;
   background: #7b428f;
@@ -142,7 +143,7 @@ main {
 
 .genre {
   background: var(--background-secondary);
-  width: 80%;
+  /* width: 80%; */
   padding: 75px;
   display: flex;
   border-radius: 8px;
@@ -516,7 +517,7 @@ textarea.form-input {
 
 @media only screen and (max-width: 768px) {
   .genre {
-    width: 100%;
+    padding: 5px;
   }
 
   .genre-item {
@@ -524,8 +525,9 @@ textarea.form-input {
   }
 
   .quote {
-    width: 90%;
+    width: 80%;
   }
+
   .quote-content {
     font-size: medium;
   }
